# DataScience_F

./: README.md  main.py  pyproject.toml  requirements.txt
artifacts/data_transformation/: test.csv  train.csv
config/: config.yaml
research/: data_transformation.ipynb  data_validation.ipynb  model_trainer.ipynb  research.ipynb
src/datascience/: __init__.py
src/datascience/components/: data_injestion.py
src/datascience/config/: configuration.py
src/datascience/pipeline/: data_ingestion_pipeline.py
src/datascience/utils/: common.py
