[project]
name = "datascience-f"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ensure>=1.0.4",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.0",
    "notebook>=7.5.4",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "python-box>=7.4.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
    "types-pyyaml>=6.0.12.20250915",
]
